Modify avaje-inject-generator to not use avaje-inject annotations directly
- Make avaje-inject and optional dependency of avaje-inject-generator
- Use AnnotationMirror to read annotation attributes
- Add DetectClassPath to detect is ServiceLoader can be used to find externally provided dependencies

--- a/blackbox-test-inject/pom.xml
+++ b/blackbox-test-inject/pom.xml
@@ -14,6 +14,7 @@
 
   <properties>
     <java.version>11</java.version>
+    <surefire.useModulePath>false</surefire.useModulePath>
   </properties>
 
   <dependencies>
@@ -33,7 +34,7 @@
     <dependency>
       <groupId>io.avaje</groupId>
       <artifactId>avaje-jsonb</artifactId>
-      <version>1.2-RC2</version>
+      <version>1.2-RC3</version>
     </dependency>
 
     <dependency>
