--- a/inject-generator/pom.xml
+++ b/inject-generator/pom.xml
@@ -17,6 +17,7 @@
       <groupId>io.avaje</groupId>
       <artifactId>avaje-inject</artifactId>
       <version>8.12-RC4</version>
+      <optional>true</optional>
     </dependency>
 
     <!-- test dependencies -->
