--- a/inject-generator/pom.xml
+++ b/inject-generator/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>io.avaje</groupId>
@@ -16,16 +18,17 @@
       <groupId>io.avaje</groupId>
       <artifactId>avaje-inject</artifactId>
       <version>${project.version}</version>
+      <optional>true</optional>
       <scope>provided</scope>
     </dependency>
 
-		<dependency>
-			<groupId>com.jolira</groupId>
-			<artifactId>hickory</artifactId>
-			<version>1.0.0</version>
-			<optional>true</optional>
-			<scope>provided</scope>
-		</dependency>
+    <dependency>
+      <groupId>io.avaje</groupId>
+      <artifactId>avaje-prisms</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <optional>true</optional>
+      <scope>provided</scope>
+    </dependency>
 
     <!-- test dependencies -->
     <dependency>
@@ -48,15 +51,15 @@
         <configuration>
           <source>11</source>
           <target>11</target>
-		  <annotationProcessorPaths>
-		  	<annotationProcessorPath>
-		  		<groupId>com.jolira</groupId>
-				<artifactId>hickory</artifactId>
-				<version>1.0.0</version>
-		  	</annotationProcessorPath>
-		  </annotationProcessorPaths>
-		</configuration>
-	  </plugin>
+          <annotationProcessorPaths>
+            <annotationProcessorPath>
+              <groupId>io.avaje</groupId>
+              <artifactId>avaje-prisms</artifactId>
+              <version>1.0-SNAPSHOT</version>
+            </annotationProcessorPath>
+          </annotationProcessorPaths>
+        </configuration>
+      </plugin>
 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -69,5 +72,4 @@
       </plugin>
     </plugins>
   </build>
-
 </project>
