--- a/inject-generator/pom.xml
+++ b/inject-generator/pom.xml
@@ -25,7 +25,7 @@
     <dependency>
       <groupId>io.avaje</groupId>
       <artifactId>avaje-prisms</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.0</version>
       <optional>true</optional>
       <scope>provided</scope>
     </dependency>
@@ -52,11 +52,11 @@
           <source>11</source>
           <target>11</target>
           <annotationProcessorPaths>
-            <annotationProcessorPath>
+            <path>
               <groupId>io.avaje</groupId>
               <artifactId>avaje-prisms</artifactId>
-              <version>1.0-SNAPSHOT</version>
-            </annotationProcessorPath>
+              <version>1.0</version>
+            </path>
           </annotationProcessorPaths>
         </configuration>
       </plugin>
