--- a/inject/pom.xml
+++ b/inject/pom.xml
@@ -16,7 +16,7 @@
     <dependency>
       <groupId>jakarta.inject</groupId>
       <artifactId>jakarta.inject-api</artifactId>
-      <version>2.0.1</version>
+      <version>2.0.1</version> <!-- jakarta -->
     </dependency>
 
     <dependency>
