--- a/inject-generator/pom.xml
+++ b/inject-generator/pom.xml
@@ -12,6 +12,9 @@
   <artifactId>avaje-inject-generator</artifactId>
   <name>avaje inject generator</name>
   <description>annotation processor generating di as source code</description>
+  <properties>
+    <avaje.prisms.version>1.6</avaje.prisms.version>
+  </properties>
   <dependencies>
 
     <dependency>
@@ -23,7 +26,7 @@
     <dependency>
       <groupId>io.avaje</groupId>
       <artifactId>avaje-prisms</artifactId>
-      <version>1.6</version>
+      <version>${avaje.prisms.version}</version>
       <optional>true</optional>
       <scope>provided</scope>
     </dependency>
@@ -53,7 +56,7 @@
             <path>
               <groupId>io.avaje</groupId>
               <artifactId>avaje-prisms</artifactId>
-              <version>1.6</version>
+              <version>${avaje.prisms.version}</version>
             </path>
           </annotationProcessorPaths>
         </configuration>
