Make the avaje-inject dependency of avaje-inject-generator optional

--- a/inject-generator/pom.xml
+++ b/inject-generator/pom.xml
@@ -21,6 +21,8 @@
       <groupId>io.avaje</groupId>
       <artifactId>avaje-inject</artifactId>
       <version>${project.version}</version>
+      <optional>true</optional>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
