Change pom autoReleaseAfterClose to true

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
   </scm>
 
   <properties>
-    <nexus.staging.autoReleaseAfterClose>false</nexus.staging.autoReleaseAfterClose>
+    <nexus.staging.autoReleaseAfterClose>true</nexus.staging.autoReleaseAfterClose>
   </properties>
 
   <modules>
