--- a/inject-gradle-plugin/build.gradle
+++ b/inject-gradle-plugin/build.gradle
@@ -14,9 +14,8 @@ repositories {
 }
 
 dependencies {
-  implementation 'io.avaje:avaje-inject:9.0-RC3'
+  implementation 'io.avaje:avaje-inject:9.0'
   implementation gradleApi()
-  //implementation localGroovy()
 
   testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
   testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
@@ -27,10 +26,6 @@ test {
 }
 
 gradlePlugin {
-//  website = 'https://avaje.io/inject/gradle'
-//  vcsUrl = 'https://github.com/avaje/avaje-inject'
-//  description = 'Avaje-Inject plugin'
-//  tags = ['Dependency Injection']
   plugins {
     avajeInject {
       id = 'io.avaje.inject'
@@ -39,4 +34,12 @@ gradlePlugin {
     }
   }
 }
+
+pluginBundle {
+  website = 'https://avaje.io/inject/gradle'
+  vcsUrl = 'https://github.com/avaje/avaje-inject'
+  description = 'Avaje-Inject plugin'
+  tags = ['Dependency Injection']
+}
+
 
