#336 - Fix dependency relationship with avaje-config
Due to module-path working differently to classpath wrt optional services we need to make this change to enable avaje-config to not have a hard dependency on avaje-inject in module-path.

--- a/inject/pom.xml
+++ b/inject/pom.xml
@@ -32,6 +32,13 @@
     </dependency>
 
     <dependency>
+      <groupId>io.avaje</groupId>
+      <artifactId>avaje-config</artifactId>
+      <version>3.2-SNAPSHOT</version>
+      <optional>true</optional>
+    </dependency>
+
+    <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
       <version>4.7.0</version>
