--- a/blackbox-test-inject/pom.xml
+++ b/blackbox-test-inject/pom.xml
@@ -35,11 +35,11 @@
       <artifactId>avaje-jsonb</artifactId>
       <version>1.3</version>
     </dependency>
-    
+
     <dependency>
       <groupId>io.avaje</groupId>
       <artifactId>avaje-config</artifactId>
-      <version>3.1-RC1</version>
+      <version>3.2-SNAPSHOT</version>
     </dependency>
 
     <dependency>
