--- a/inject/pom.xml
+++ b/inject/pom.xml
@@ -34,7 +34,7 @@
     <dependency>
       <groupId>io.avaje</groupId>
       <artifactId>avaje-config</artifactId>
-      <version>3.2-SNAPSHOT</version>
+      <version>3.2</version>
       <optional>true</optional>
     </dependency>
 
