--- a/inject-generator/pom.xml
+++ b/inject-generator/pom.xml
@@ -11,7 +11,7 @@
 
   <artifactId>avaje-inject-generator</artifactId>
   <name>avaje inject generator</name>
-  <description>annotation processor generating di as source code</description>
+  <description>annotation processor generating source code for avaje-inject dependency injection</description>
   <properties>
     <avaje.prisms.version>1.14</avaje.prisms.version>
   </properties>
