--- a/inject-test/pom.xml
+++ b/inject-test/pom.xml
@@ -8,6 +8,7 @@
   </parent>
 
   <artifactId>avaje-inject-test</artifactId>
+  <description>testing support for avaje-inject dependency injection</description>
 
   <properties>
     <jupiter.version>5.9.0</jupiter.version>
