--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
     <profile>
       <id>jdk22plus</id>
       <activation>
-        <jdk>[22]</jdk>
+        <jdk>[21, 22]</jdk>
       </activation>
       <build>
         <plugins>
