--- a/inject-test/pom.xml
+++ b/inject-test/pom.xml
@@ -89,9 +89,10 @@
     </dependency>
 
     <dependency>
-      <groupId>io.javalin</groupId>
-      <artifactId>javalin</artifactId>
-      <version>4.6.1</version>
+      <groupId>org.jetbrains</groupId>
+      <artifactId>annotations</artifactId>
+<!--      <version>24.0.1</version>-->
+      <version>13.0</version>
       <scope>test</scope>
     </dependency>
 
