--- a/.github/workflows/jdk-ea.yml
+++ b/.github/workflows/jdk-ea.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java_version: [GA,EA] ## valhalla (fails javadoc)
+        java_version: [GA,22-ea,EA] ## valhalla (fails javadoc)
         os: [ubuntu-latest]
 
     steps:
