--- a/inject-generator/pom.xml
+++ b/inject-generator/pom.xml
@@ -13,7 +13,7 @@
   <name>avaje inject generator</name>
   <description>annotation processor generating source code for avaje-inject dependency injection</description>
   <properties>
-    <avaje.prisms.version>1.18</avaje.prisms.version>
+    <avaje.prisms.version>1.21-SNAPSHOT</avaje.prisms.version>
   </properties>
   <dependencies>
 
