--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,7 +3,23 @@ updates:
 - package-ecosystem: maven
   directory: "/"
   schedule:
-    interval: "daily"
+    interval: "weekly"
   open-pull-requests-limit: 10
   ignore:
       - dependency-name: "jakarta.inject:jakarta.inject-api"
+  groups:
+      dev-deps:
+        dependency-type: "development"
+      prod-deps:
+        dependency-type: "production"
+
+- package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+    open-pull-requests-limit: 5
+    commit-message:
+      prefix: "[workflow]"
+    labels:
+      - "dependencies"
+    target-branch: "master"
