--- a/inject/pom.xml
+++ b/inject/pom.xml
@@ -20,6 +20,12 @@
 
     <dependency>
       <groupId>io.avaje</groupId>
+      <artifactId>avaje-inject-aop</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    
+    <dependency>
+      <groupId>io.avaje</groupId>
       <artifactId>avaje-lang</artifactId>
       <version>1.1</version>
     </dependency>
