Split AOP into a separate module (#601)
* split aop into a separate module

* fix build

* Bump parent pom and change exports

---------

Co-authored-by: Rob Bygrave <robin.bygrave@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     <module>inject-events</module>
     <module>inject-generator</module>
     <module>inject-test</module>
+    <module>inject-aop</module>
   </modules>
 
   <profiles>
