Add filter such that InjectProcessor only detects @ServiceProvider services for InjectExtension interfaces

--- a/inject-maven-plugin/pom.xml
+++ b/inject-maven-plugin/pom.xml
@@ -5,6 +5,7 @@
     <groupId>org.avaje</groupId>
     <artifactId>java11-oss</artifactId>
     <version>4.3</version>
+    <relativePath/>
   </parent>
 
   <groupId>io.avaje</groupId>
