Add support for building against Valhalla EA

--- a/inject/pom.xml
+++ b/inject/pom.xml
@@ -91,6 +91,7 @@
           <show>public</show>
           <linksource>true</linksource>
           <overview>src/main/javadoc/overview.html</overview>
+          <!-- Javadoc-No-Preview -->
         </configuration>
         <executions>
           <execution>
