--- a/inject-generator/pom.xml
+++ b/inject-generator/pom.xml
@@ -14,6 +14,9 @@
   <description>annotation processor generating source code for avaje-inject dependency injection</description>
   <properties>
     <avaje.prisms.version>1.31</avaje.prisms.version>
+    <!-- VALHALLA-START ___
+    <maven.compiler.enablePreview>false</maven.compiler.enablePreview>
+    ____ VALHALLA-END -->
   </properties>
   <dependencies>
 
