--- a/blackbox-other/pom.xml
+++ b/blackbox-other/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <artifactId>avaje-inject-parent</artifactId>
     <groupId>io.avaje</groupId>
-    <version>10.7-SNAPSHOT</version>
+    <version>11.0</version>
   </parent>
 
   <artifactId>blackbox-other</artifactId>
