--- a/blackbox-test-inject/pom.xml
+++ b/blackbox-test-inject/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>avaje-inject-parent</artifactId>
     <groupId>io.avaje</groupId>
-    <version>10.7-SNAPSHOT</version>
+    <version>11.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
