Tests only - use logback-classic for test scope logging

--- a/inject/pom.xml
+++ b/inject/pom.xml
@@ -73,9 +73,9 @@
     </dependency>
 
     <dependency>
-      <groupId>org.avaje</groupId>
-      <artifactId>logback</artifactId>
-      <version>1.0</version>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.5.18</version>
       <scope>test</scope>
     </dependency>
 
