--- a/inject-maven-plugin/pom.xml
+++ b/inject-maven-plugin/pom.xml
@@ -41,6 +41,13 @@
         <configuration>
           <goalPrefix>provides</goalPrefix>
         </configuration>
+         <dependencies>
+            <dependency>
+              <groupId>org.ow2.asm</groupId>
+              <artifactId>asm</artifactId>
+              <version>9.9</version>
+            </dependency>
+         </dependencies>
       </plugin>
     </plugins>
   </build>
