Fix Valhalla worklow again
they changed the name back

--- a/.github/workflows/valhalla-ea.yml
+++ b/.github/workflows/valhalla-ea.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java_version: [jep401ea2]
+        java_version: [valhalla]
         os: [ubuntu-latest]
 
     steps:
