Add avaje-inject-bom bill of materials

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
     <module>inject-test</module>
     <module>inject-aop</module>
     <module>inject-maven-plugin</module>
+    <module>inject-bom</module>
   </modules>
 
   <profiles>
