--- a/inject-generator/pom.xml
+++ b/inject-generator/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>io.avaje</groupId>
     <artifactId>avaje-inject-parent</artifactId>
-    <version>12.4-RC1</version>
+    <version>12.4</version>
   </parent>
 
   <artifactId>avaje-inject-generator</artifactId>
