--- a/inject-maven-plugin/pom.xml
+++ b/inject-maven-plugin/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>avaje-inject-parent</artifactId>
     <groupId>io.avaje</groupId>
-    <version>12.4-RC1</version>
+    <version>12.4</version>
   </parent>
 
   <artifactId>avaje-inject-maven-plugin</artifactId>
